# vex-remote-upload

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
server/: Cargo.toml
server/src/: config.rs  device.rs  main.rs  manager.rs
server/src/routes/: list.rs  mod.rs
