[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
axum-streams = { version = "0.12.0", features = ["text", "protobuf"] }
confique = "0.2.5"
crc = "3.0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.195", features = ["derive"] }
shared = { path = "../shared" }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "full"] }
tokio-serial = "5.4.4"
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vexv5_serial = { git = "https://github.com/vexrs/vexv5_serial" }
